using a local leaflet css

--- a/air.html
+++ b/air.html
@@ -18,6 +18,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="/air/style.css" rel="stylesheet">
+    <link href="/files/leaflet.css" rel="stylesheet">
+
     <script src="/air/script.js" defer></script>
 </head>
 
@@ -148,6 +150,7 @@
 
     <!-- Scripts -->
     <script src="/files/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
     <!-- <script src="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script> -->
 
     <script src="https://maps.googleapis.com/maps/api/js"></script>
