restructuring the project directories

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>Weather App</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/landing/style.css" rel="stylesheet">
-    <script src="/landing/script.js" defer></script>
+    <link href="/style.css" rel="stylesheet">
+    <script src="/script.js" defer></script>
 </head>
 
 <body>
@@ -45,10 +45,10 @@
                                             href="/index.html">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="/weather.html">Weather</a>
+                                        <a class="nav-link" href="/weather/weather.html">Weather</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="/air.html">Air Quality</a>
+                                        <a class="nav-link" href="/air/air.html">Air Quality</a>
                                     </li>
                                 </ul>
                             </div>
