--- a/weather/weather.html
+++ b/weather/weather.html
@@ -38,10 +38,10 @@
                                 <a class="nav-link" aria-current="page" href="/index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/weather.html">Weather</a>
+                                <a class="nav-link" href="/weather/weather.html">Weather</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/air.html">Air Quality</a>
+                                <a class="nav-link" href="/air/air.html">Air Quality</a>
                             </li>
                         </ul>
                     </div>
