--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>Weather App</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/style.css" rel="stylesheet">
-    <script src="/script.js" defer></script>
+    <link href="/static/style.css" rel="stylesheet">
+    <script src="/static/script.js" defer></script>
 </head>
 
 <body>
@@ -45,10 +45,10 @@
                                             href="/index.html">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="/weather/weather.html">Weather</a>
+                                        <a class="nav-link" href="/weather.html">Weather</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="/air/air.html">Air Quality</a>
+                                        <a class="nav-link" href="/air.html">Air Quality</a>
                                     </li>
                                 </ul>
                             </div>
@@ -67,10 +67,10 @@
                                 location</p>
                         </div>
                         <div class="d-flex flex-column p-3 mx-auto just">
-                            <a href="/weather.html" class="href"><button type="button"
+                            <a href="/static/weather.html" class="href"><button type="button"
                                     class="col main-btn btn btn-primary justify-content-center my-2 mx-auto">
                                     Weather</button></a>
-                            <a href="/air.html" class="href"><button type="button"
+                            <a href="/static/air.html" class="href"><button type="button"
                                     class="col main-btn btn btn-primary justify-content-center my-2 mx-auto">Air
                                     Quality</button></a>
                         </div>
