--- a/weather.html
+++ b/weather.html
@@ -17,8 +17,8 @@
     <title>Weather App</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/weather/style.css" rel="stylesheet">
-    <script src="/weather/script.js" defer></script>
+    <link href="/static/weather.css" rel="stylesheet">
+    <script src="/static/weather.js" defer></script>
 </head>
 
 <body>
@@ -38,10 +38,10 @@
                                 <a class="nav-link" aria-current="page" href="/index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/weather/weather.html">Weather</a>
+                                <a class="nav-link" href="/weather.html">Weather</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/air/air.html">Air Quality</a>
+                                <a class="nav-link" href="/air.html">Air Quality</a>
                             </li>
                         </ul>
                     </div>
