--- a/pages/index.html
+++ b/pages/index.html
@@ -32,7 +32,7 @@
                 <div class="container mx-5">
                     <nav id="navbar" class="navbar navbar-expand-lg bg-light mx-auto">
                         <div class="container-fluid">
-                            <a id="navbar-brand" class="navbar-brand" href="/index.html">Breeze</a>
+                            <a id="navbar-brand" class="navbar-brand" href="/pages/index.html">Breeze</a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                                 aria-label="Toggle navigation">
@@ -41,14 +41,13 @@
                             <div class="collapse navbar-collapse" id="navbarNav">
                                 <ul class="navbar-nav mx-auto">
                                     <li class="nav-item">
-                                        <a class="nav-link" aria-current="page"
-                                            href="/index.html">Home</a>
+                                        <a class="nav-link" aria-current="page" href="/pages/index.html">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="/weather.html">Weather</a>
+                                        <a class="nav-link" href="/pages/weather.html">Weather</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="/air.html">Air Quality</a>
+                                        <a class="nav-link" href="/pages/air.html">Air Quality</a>
                                     </li>
                                 </ul>
                             </div>
@@ -60,17 +59,18 @@
                 <div class="btn-container col-6">
                     <div class="container mx-auto">
                         <div class="d-flex flex-column ms-5">
-                            <h1 id="hero-h1" class="hero-text text-start ">Weather forecast and air quality checker in one place</h1>
+                            <h1 id="hero-h1" class="hero-text text-start ">Weather forecast and air quality checker in
+                                one place</h1>
                             <p id="hero-p" class="hero-text text-start">Choose one of two options to check the weather
                                 in
                                 any city in the world or get information about the air quality and pollution in your
                                 location</p>
                         </div>
                         <div class="d-flex flex-column p-3 mx-auto just">
-                            <a href="/static/weather.html" class="href"><button type="button"
+                            <a href="/pages/weather.html" class="href"><button type="button"
                                     class="col main-btn btn btn-primary justify-content-center my-2 mx-auto">
                                     Weather</button></a>
-                            <a href="/static/air.html" class="href"><button type="button"
+                            <a href="/pages/air.html" class="href"><button type="button"
                                     class="col main-btn btn btn-primary justify-content-center my-2 mx-auto">Air
                                     Quality</button></a>
                         </div>
