--- a/air.html
+++ b/air.html
@@ -17,12 +17,12 @@
     <title>Air Quality</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/static/air.css" rel="stylesheet">
-    <link href="/static/leaflet.css" rel="stylesheet">
+    <link href="air.css" rel="stylesheet">
+    <link href="leaflet.css" rel="stylesheet">
 
-    <script src="/static/air.js" defer></script>
-    <script src="/static/script.js" defer></script>
-    <script src="/static/leaflet.js" defer></script>
+    <script src="air.js" defer></script>
+    <script src="script.js" defer></script>
+    <script src="leaflet.js" defer></script>
 </head>
 
 <body>
@@ -37,7 +37,7 @@
                 <div class="navbar-container container-fluid mx-5">
                     <nav id="navbar" class="navbar navbar-expand-lg bg-light mx-auto">
                         <div class="container-fluid">
-                            <a id="navbar-brand" class="navbar-brand" href="/pages/index.html">Breeze</a>
+                            <a id="navbar-brand" class="navbar-brand" href="index.html">Breeze</a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                                 aria-label="Toggle navigation">
@@ -46,13 +46,13 @@
                             <div class="collapse navbar-collapse" id="navbarNav">
                                 <ul class="navbar-nav mx-auto">
                                     <li class="nav-item">
-                                        <a class="nav-link" aria-current="page" href="/pages/index.html">Home</a>
+                                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="/pages/weather.html">Weather</a>
+                                        <a class="nav-link" href="weather.html">Weather</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="/pages/air.html">Air Quality</a>
+                                        <a class="nav-link" href="air.html">Air Quality</a>
                                     </li>
                                 </ul>
                             </div>
