--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>Weather App</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/static/style.css" rel="stylesheet">
-    <script src="/static/script.js" defer></script>
+    <link href="style.css" rel="stylesheet">
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -32,7 +32,7 @@
                 <div class="container mx-5">
                     <nav id="navbar" class="navbar navbar-expand-lg bg-light mx-auto">
                         <div class="container-fluid">
-                            <a id="navbar-brand" class="navbar-brand" href="/pages/index.html">Breeze</a>
+                            <a id="navbar-brand" class="navbar-brand" href="index.html">Breeze</a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                                 aria-label="Toggle navigation">
@@ -41,13 +41,13 @@
                             <div class="collapse navbar-collapse" id="navbarNav">
                                 <ul class="navbar-nav mx-auto">
                                     <li class="nav-item">
-                                        <a class="nav-link" aria-current="page" href="/pages/index.html">Home</a>
+                                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="/pages/weather.html">Weather</a>
+                                        <a class="nav-link" href="weather.html">Weather</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="/pages/air.html">Air Quality</a>
+                                        <a class="nav-link" href="air.html">Air Quality</a>
                                     </li>
                                 </ul>
                             </div>
@@ -67,10 +67,10 @@
                                 location</p>
                         </div>
                         <div class="d-flex flex-column p-3 mx-auto just">
-                            <a href="/pages/weather.html" class="href"><button type="button"
+                            <a href="weather.html" class="href"><button type="button"
                                     class="col main-btn btn btn-primary justify-content-center my-2 mx-auto">
                                     Weather</button></a>
-                            <a href="/pages/air.html" class="href"><button type="button"
+                            <a href="air.html" class="href"><button type="button"
                                     class="col main-btn btn btn-primary justify-content-center my-2 mx-auto">Air
                                     Quality</button></a>
                         </div>
