--- a/weather.html
+++ b/weather.html
@@ -17,8 +17,8 @@
     <title>Weather App</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/static/weather.css" rel="stylesheet">
-    <script src="/static/weather.js" defer></script>
+    <link href="weather.css" rel="stylesheet">
+    <script src="weather.js" defer></script>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
         <div class="navbar-container container">
             <nav id="navbar" class="navbar navbar-expand-lg bg-light mx-auto">
                 <div class="container-fluid ms-5">
-                    <a id="navbar-brand" class="navbar-brand" href="/pages/index.html">Breeze</a>
+                    <a id="navbar-brand" class="navbar-brand" href="index.html">Breeze</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -35,13 +35,13 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="/pages/index.html">Home</a>
+                                <a class="nav-link" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/pages/weather.html">Weather</a>
+                                <a class="nav-link" href="weather.html">Weather</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/pages/air.html">Air Quality</a>
+                                <a class="nav-link" href="air.html">Air Quality</a>
                             </li>
                         </ul>
                     </div>
