trying a fix for github pages styling - removed '/' from bg img on index

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                 <div class="col-6">
                     <div>
-                        <img src="/images/landing.png" class="landing-img img-fluid" alt="forecast image">
+                        <img src="images/landing.png" class="landing-img img-fluid" alt="forecast image">
                     </div>
                 </div>
 
