--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="main_container container-fluid d-flex">
         <!-- <video class="video" src="./media/background.mp4" autoplay loop muted></video>
         <div class="overlay"></div> -->
-        <img class="bg-img" src="/images/1.jpg" alt="">
+        <img class="bg-img" src="images/1.jpg" alt="">
 
         <div id="hero-container"
             class="container d-flex row justify-content-center align-content-center align-items-center text-center m-auto">
