remove all '/' from beginning of src for github pages

--- a/pages/air.html
+++ b/pages/air.html
@@ -17,17 +17,17 @@
     <title>Air Quality</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="air.css" rel="stylesheet">
-    <link href="leaflet.css" rel="stylesheet">
+    <link href="static/air.css" rel="stylesheet">
+    <link href="static/leaflet.css" rel="stylesheet">
 
-    <script src="air.js" defer></script>
-    <script src="script.js" defer></script>
-    <script src="leaflet.js" defer></script>
+    <script src="static/air.js" defer></script>
+    <script src="static/script.js" defer></script>
+    <script src="static/leaflet.js" defer></script>
 </head>
 
 <body>
     <section class="main_container container-fluid d-flex">
-        <img class="bg-img" src="/images/2.jpg" alt="">
+        <img class="bg-img" src="images/2.jpg" alt="">
 
         <div id="hero-container" class="container-fluid row align-items-center mx-auto">
             <!-- Hero -->
