--- a/pages/index.html
+++ b/pages/index.html
@@ -10,8 +10,8 @@
     <title>Weather App</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="style.css" rel="stylesheet">
-    <script src="script.js" defer></script>
+    <link href="static/style.css" rel="stylesheet">
+    <script src="static/script.js" defer></script>
 </head>
 
 <body>
