moved files back to root

--- a/air.html
+++ b/air.html
@@ -17,12 +17,12 @@
     <title>Air Quality</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="static/air.css" rel="stylesheet">
-    <link href="static/leaflet.css" rel="stylesheet">
+    <link href="air.css" rel="stylesheet">
+    <link href="leaflet.css" rel="stylesheet">
 
-    <script src="static/air.js" defer></script>
-    <script src="static/script.js" defer></script>
-    <script src="static/leaflet.js" defer></script>
+    <script src="air.js" defer></script>
+    <script src="script.js" defer></script>
+    <script src="leaflet.js" defer></script>
 </head>
 
 <body>
