--- a/weather.html
+++ b/weather.html
@@ -17,8 +17,8 @@
     <title>Weather App</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="static/weather.css" rel="stylesheet">
-    <script src="static/weather.js" defer></script>
+    <link href="weather.css" rel="stylesheet">
+    <script src="weather.js" defer></script>
 </head>
 
 <body>
