--- a/air.html
+++ b/air.html
@@ -152,7 +152,7 @@
 
     <!-- Scripts -->
     <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
-    <script src="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script>
+    <script src="https://cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script>
 
     <script src="https://maps.googleapis.com/maps/api/js"></script>
 
